--- a/StudentLife/package.json
+++ b/StudentLife/package.json
@@ -8,7 +8,13 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "build" : "npx expo export --platform web --output-dir dist && cp staticwebapp.config.json dist/ || true"
+  },
+  "engines":{
+
+    "node" : "22.x"
+
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
