--- a/StudentLife/package.json
+++ b/StudentLife/package.json
@@ -9,14 +9,13 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "lint": "expo lint",
-    "build" : "npx expo export --platform web --output-dir dist && cp staticwebapp.config.json dist/ || true"
+    "build": "npx expo export --platform web --output-dir dist && cp staticwebapp.config.json dist/ || true"
   },
-  "engines":{
-
-    "node" : "22.x"
-
+  "engines": {
+    "node": "22.x"
   },
   "dependencies": {
+    "@azure/storage-blob": "^12.29.1",
     "@expo/vector-icons": "^15.0.2",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
