rearranges UI elements and enables dark mode for home page

--- a/StudentLife/app.json
+++ b/StudentLife/app.json
@@ -13,7 +13,8 @@
       "bundleIdentifier": "com.dyeam05.StudentLife",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
-      }
+      },
+      "userInterfaceStyle": "automatic"
     },
     "android": {
       "adaptiveIcon": {
