--- a/StudentLife/package.json
+++ b/StudentLife/package.json
@@ -19,7 +19,8 @@
     "@expo/vector-icons": "^15.0.2",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
-    "@react-navigation/native": "^7.1.8",
+    "@react-navigation/native": "^7.1.24",
+    "@react-navigation/native-stack": "^7.8.5",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
     "expo": "~54.0.0",
