--- a/api/package.json
+++ b/api/package.json
@@ -2,7 +2,7 @@
   "name": "sl-api",
   "version": "1.0.0",
   "description": "",
-  "main": "src/functions/*.js",
+  "main": "src/functions/index.js",
   "scripts": {
     "start": "func start",
     "test": "echo \"No tests yet...\""
