--- a/StudentLife/tsconfig.json
+++ b/StudentLife/tsconfig.json
@@ -12,5 +12,5 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-, "services/azureService.js"  ]
+, "services/azureService.ts"  ]
 }
