--- a/StudentLife/package.json
+++ b/StudentLife/package.json
@@ -9,7 +9,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "lint": "expo lint",
-    "build": "npx expo export --platform web --output-dir dist && cp staticwebapp.config.json dist/ || true"
+    "build": "npx expo export --platform web --output-dir dist && cp staticwebapp.config.json dist/ || true", 
+    "test" : "jest"
   },
   "engines": {
     "node": "22.x"
@@ -50,10 +51,13 @@
     "util": "^0.12.5"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "@types/react": "~19.1.0",
     "babel-preset-expo": "~54.0.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
+    "jest": "^30.2.0",
+    "ts-jest": "^29.4.6",
     "typescript": "~5.9.2"
   },
   "private": true
