--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,30 +1,11 @@
-name: Tests
+name: Frontend Tests
 
 on:
   push:
   pull_request:
 
 jobs:
-  test-api:
-    name: API tests
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: npm
-          cache-dependency-path: api/package-lock.json
-
-      - name: Install + Test (api)
-        working-directory: api
-        run: |
-          npm ci
-          npm test
-
   test-frontend:
-    name: Frontend tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
