--- a/StudentLife/package.json
+++ b/StudentLife/package.json
@@ -9,8 +9,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "lint": "expo lint",
-    "build": "npx expo export --platform web --output-dir dist && cp staticwebapp.config.json dist/ || true", 
-    "test" : "jest"
+    "build": "npx expo export --platform web --output-dir dist && cp staticwebapp.config.json dist/ || true",
+    "test": "jest"
   },
   "engines": {
     "node": "22.x"
@@ -24,21 +24,20 @@
     "@react-navigation/native-stack": "^7.8.5",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
-    "expo": "~54.0.0",
     "expo-constants": "~18.0.9",
-    "expo-font": "14.0.9",
-    "expo-haptics": "~15.0.7",
-    "expo-image": "3.0.9",
-    "expo-linking": "~8.0.8",
-    "expo-router": "6.0.12",
-    "expo-splash-screen": "~31.0.10",
-    "expo-status-bar": "~3.0.8",
-    "expo-symbols": "~1.0.7",
-    "expo-system-ui": "~6.0.7",
-    "expo-web-browser": "15.0.8",
+    "expo-font": "~14.0.10",
+    "expo-haptics": "~15.0.8",
+    "expo-image": "~3.0.11",
+    "expo-linking": "~8.0.10",
+    "expo-router": "~6.0.19",
+    "expo-splash-screen": "~31.0.12",
+    "expo-status-bar": "~3.0.9",
+    "expo-symbols": "~1.0.8",
+    "expo-system-ui": "~6.0.9",
+    "expo-web-browser": "~15.0.10",
     "react": "^19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
     "react-native-calendars": "^1.1313.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-get-random-values": "^2.0.0",
@@ -56,6 +55,7 @@
     "babel-preset-expo": "~54.0.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
+    "expo": "^54.0.29",
     "jest": "^30.2.0",
     "ts-jest": "^29.4.6",
     "typescript": "~5.9.2"
